k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: "rg.com"
spec:
  rules:
    - host: 9018-109-149-142-65.eu.ngrok.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-svc
                port:
                  number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  externalName: jenkins-dev.automation.ucl.ac.uk
  type: ExternalName
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
      name: jenkins
# lol
# lol x2
# lol x3
